# proc-macro-workshop

./: Cargo.toml
builder/: Cargo.toml
builder/src/: builder_macro_v2.rs  field_parser.rs  lib.rs  struct_parser.rs
builder/tests/: 01-parse.rs  02-create-builder.rs  progress.rs
